trunk/Archive2/1b/e56e7d7c738171/output
+ g++ -O2 -std=c++11 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:9:13: error: ‘bar::bar(double)’ inherited from ‘foo’
  using foo::foo;
             ^
main.cpp:9:13: error: conflicts with version inherited from ‘foo’
+ clang++ -O2 -stdlib=libc++ -std=c++11 -Wall -Wextra -pedantic -pthread main.cpp -lcxxrt -ldl
+ ./a.out
